- Add navigation pane - Add routing - Add start page, user details components - Make user-row component clickable - Design landing page with logo

--- a/src/app/users/users-list.component.html
+++ b/src/app/users/users-list.component.html
@@ -42,7 +42,7 @@
     </div>
     <div *ngIf="users && users.length">
       <div *ngFor="let item of filteredUsers">
-        <user-row #thumbnail [user]="item"></user-row>
+        <user-row [user]="item"></user-row>
       </div>
     </div>
   </div>
