--- a/src/app/users/user-details.component.html
+++ b/src/app/users/user-details.component.html
@@ -1,3 +1,5 @@
-<p>
-  user-details works!
-</p>
+<div class="card" *ngIf="user">
+  <div class="card-header">
+    {{pageTitle + ': ' + getFullName()}}
+  </div>
+</div>
