- Add guard to user-details page - Add back button to user-details page

--- a/src/app/users/user-details.component.html
+++ b/src/app/users/user-details.component.html
@@ -1,5 +1,10 @@
 <div class="card" *ngIf="user">
   <div class="card-header">
-    {{pageTitle + ': ' + getFullName()}}
+    {{ pageTitle + ': ' + getFullName() }}
+  </div>
+  <div>
+    <button (click)="onBack()">
+      &lt; Back
+    </button>
   </div>
 </div>
