--- a/src/app/users/users-list.component.html
+++ b/src/app/users/users-list.component.html
@@ -1,8 +1,8 @@
 <div class="card">
-  <div class="card-header">
+  <div class="card-divider">
     {{ pageTitle }}
   </div>
-  <div class="card-body">
+  <div class="card-section">
     <div class="row">
       <div class="col-md-2">Search:</div>
       <div class="col-md-4">
