- Add global css style for all cards - Implement view for Details page - Polish all the UI

--- a/src/app/start/start-page.component.html
+++ b/src/app/start/start-page.component.html
@@ -1,7 +1,6 @@
-<div class="row column text-center">
-<div class="card" style="width: 100%; margin-top: 15px">
+<div class="card">
   <div class="card-divider">&nbsp;</div>
-  <div class="text-center">
+  <div class="card-image text-center">
     <a href="https://teradek.com/" target="blank">
       <img
         src="./assets/images/logo.png"
@@ -49,8 +48,7 @@
   <div class="text-center card-divider">
     <p>
       Please follow the navigation link
-      <a [routerLink]="['/users']">Users List</a> to see the Task implementation
+      <a [routerLink]="['/users']">Users List</a> to see the implementation
     </p>
   </div>
-</div>
 </div>
