--- a/src/app/users/user-details.component.html
+++ b/src/app/users/user-details.component.html
@@ -1,10 +1,21 @@
 <div class="card" *ngIf="user">
-  <div class="card-header">
-    {{ pageTitle + ': ' + getFullName() }}
+  <div class="card-divider">
+    <h4>{{ pageTitle + ': ' + user.id}}</h4>
   </div>
-  <div>
-    <button (click)="onBack()">
-      &lt; Back
+  <div class="card-section user-details">
+    <div class="grid-x grid-padding-x">
+      <div class="cell small-3">{{ getFullName() }}</div>
+    </div>
+    <div class="grid-x grid-padding-x">
+      <div class="cell small-3">{{ user.address }}</div>
+    </div>
+    <div class="grid-x grid-padding-x">
+      <div class="cell small-3">{{ user.phone }}</div>
+    </div>
+  </div>
+  <div class="card-divider">
+    <button class="button expanded" (click)="onBack()">
+      Back
     </button>
   </div>
 </div>
